src/DBMS/queryProcessing/relationalCalculusToSql/trcGrammar/TrcGrammar.java
/* Generated By:JavaCC: Do not edit this line. TrcGrammar.java */
package DBMS.queryProcessing.relationalCalculusToSql.trcGrammar;

import java.util.ArrayList;
import java.util.List;

import DBMS.queryProcessing.relationalCalculusToSql.trcQueryElements.*;

public class TrcGrammar implements TrcGrammarConstants {
	/*
	 * public static void main(String args []) throws ParseException { TrcGrammar
	 * parser = new TrcGrammar(System.in); Query p = parser.query(); }
	 */
//Usar o padrao factory pra gerar Formulas com operator

	@SuppressWarnings("unused")
	final public Formula atomicFormula() throws ParseException {
		Formula af;
		Token token1;
		Token token2;
		Token token3;
		Token token4;
		Token op;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case IDENTIFICADOR:
			token1 = jj_consume_token(IDENTIFICADOR);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case LPAREN:
				jj_consume_token(LPAREN);
				token2 = jj_consume_token(IDENTIFICADOR);
				jj_consume_token(RPAREN);
				af = new AtomicFormulaIsA(token1.image, token2.image);
				break;
			case DOT:
				jj_consume_token(DOT);
				token2 = jj_consume_token(IDENTIFICADOR);
				op = operator();
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case IDENTIFICADOR:
					token3 = jj_consume_token(IDENTIFICADOR);
					jj_consume_token(DOT);
					token4 = jj_consume_token(IDENTIFICADOR);
					af = new AtomicFormulaAttOpAtt(op.image, new TupleProjection(token1.image, token2.image),
							new TupleProjection(token3.image, token4.image));
					break;
				case INTEIRO_LITERAL:
				case STRING_LITERAL:
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case INTEIRO_LITERAL:
						token3 = jj_consume_token(INTEIRO_LITERAL);
						break;
					case STRING_LITERAL:
						token3 = jj_consume_token(STRING_LITERAL);
						break;
					default:
						jj_la1[0] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
					}
					af = new AtomicFormulaAttOpConst(op.image, new TupleProjection(token1.image, token2.image),
							new Constant(token3.image));
					break;
				default:
					jj_la1[1] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				break;
			default:
				jj_la1[2] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			break;
		case INTEIRO_LITERAL:
		case STRING_LITERAL:
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case INTEIRO_LITERAL:
				token1 = jj_consume_token(INTEIRO_LITERAL);
				break;
			case STRING_LITERAL:
				token1 = jj_consume_token(STRING_LITERAL);
				break;
			default:
				jj_la1[3] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			op = operator();
			token2 = jj_consume_token(IDENTIFICADOR);
			jj_consume_token(DOT);
			token3 = jj_consume_token(IDENTIFICADOR);
			af = new AtomicFormulaAttOpConst(op.image, new TupleProjection(token2.image, token3.image),
					new Constant(token1.image));
			break;
		default:
			jj_la1[4] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		{
			if (true)
				return af;
		}
		throw new Error("Missing return statement in function");
	}

	@SuppressWarnings("unused")
	final public Token operator() throws ParseException {
		Token op;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case LESSTHAN:
			op = jj_consume_token(LESSTHAN);
			break;
		case GREATERTHAN:
			op = jj_consume_token(GREATERTHAN);
			break;
		case EQUALS:
			op = jj_consume_token(EQUALS);
			break;
		case LESSOREQUALTHAN:
			op = jj_consume_token(LESSOREQUALTHAN);
			break;
		case GREATEROREQUALTHAN:
			op = jj_consume_token(GREATEROREQUALTHAN);
			break;
		case NOTEQUALS:
			op = jj_consume_token(NOTEQUALS);
			break;
		default:
			jj_la1[5] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		{
			if (true)
				return op;
		}
		throw new Error("Missing return statement in function");
	}

	@SuppressWarnings("unused")
	final public List<TupleProjection> tupleProjectionList() throws ParseException {
		List<TupleProjection> tpl = new ArrayList<TupleProjection>();
		TupleProjection p;
		Token token1;
		Token token2;
		token1 = jj_consume_token(IDENTIFICADOR);
		jj_consume_token(DOT);
		token2 = jj_consume_token(IDENTIFICADOR);
		p = new TupleProjection(token1.image, token2.image);
		tpl.add(p);
		label_1: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case COMMA:
				;
				break;
			default:
				jj_la1[6] = jj_gen;
				break label_1;
			}
			p = tupleProjectionListRest();
			tpl.add(p);
		}
		{
			if (true)
				return tpl;
		}
		throw new Error("Missing return statement in function");
	}

	@SuppressWarnings("unused")
	final public TupleProjection tupleProjectionListRest() throws ParseException {
		TupleProjection p;
		Token token1;
		Token token2;
		jj_consume_token(COMMA);
		token1 = jj_consume_token(IDENTIFICADOR);
		jj_consume_token(DOT);
		token2 = jj_consume_token(IDENTIFICADOR);
		p = new TupleProjection(token1.image, token2.image);
		{
			if (true)
				return p;
		}
		throw new Error("Missing return statement in function");
	}

	@SuppressWarnings("unused")
	final public Formula formula() throws ParseException {
		Formula f1;
		Formula f2;
		f1 = andOrFormula();
		label_2: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case ARROW:
				;
				break;
			default:
				jj_la1[7] = jj_gen;
				break label_2;
			}
			jj_consume_token(ARROW);
			f2 = andOrFormula();
			f1 = new Implication(f1, f2);
		}
		{
			if (true)
				return f1;
		}
		throw new Error("Missing return statement in function");
	}

	@SuppressWarnings("unused")
	final public Formula andOrFormula() throws ParseException {
		Formula f1;
		Formula f2;
		f1 = terminalFormula();
		label_3: while (true) {
			if (jj_2_1(2)) {
				;
			} else {
				break label_3;
			}
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case OR:
				jj_consume_token(OR);
				f2 = terminalFormula();
				f1 = new Or(f1, f2);
				break;
			case AND:
				jj_consume_token(AND);
				f2 = terminalFormula();
				f1 = new And(f1, f2);
				break;
			default:
				jj_la1[8] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
		}
		{
			if (true)
				return f1;
		}
		throw new Error("Missing return statement in function");
	}

	@SuppressWarnings("unused")
	final public Formula terminalFormula() throws ParseException {
		Formula f;
		Token token;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case NOT:
			jj_consume_token(NOT);
			jj_consume_token(LPAREN);
			f = formula();
			jj_consume_token(RPAREN);
			f = new Not(f);
			break;
		case INTEIRO_LITERAL:
		case STRING_LITERAL:
		case IDENTIFICADOR:
			f = atomicFormula();
			break;
		case LPAREN:
			jj_consume_token(LPAREN);
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case NOT:
			case LPAREN:
			case INTEIRO_LITERAL:
			case STRING_LITERAL:
			case IDENTIFICADOR:
				f = formula();
				f = new InnerFormula(f);
				jj_consume_token(RPAREN);
				break;
			case FORALL:
				jj_consume_token(FORALL);
				token = jj_consume_token(IDENTIFICADOR);
				jj_consume_token(RPAREN);
				jj_consume_token(LPAREN);
				f = formula();
				jj_consume_token(RPAREN);
				f = new ForAll(token.image, f);
				break;
			case EXISTS:
				jj_consume_token(EXISTS);
				token = jj_consume_token(IDENTIFICADOR);
				jj_consume_token(RPAREN);
				jj_consume_token(LPAREN);
				f = formula();
				jj_consume_token(RPAREN);
				f = new Exists(token.image, f);
				break;
			default:
				jj_la1[9] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
			}
			break;
		default:
			jj_la1[10] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
		{
			if (true)
				return f;
		}
		throw new Error("Missing return statement in function");
	}

	@SuppressWarnings("unused")
	final public Query query() throws ParseException {
		Query q;
		Formula f;
		List<TupleProjection> tpl;
		jj_consume_token(LBRACE);
		tpl = tupleProjectionList();
		jj_consume_token(MEIODAQUERY);
		f = formula();
		jj_consume_token(RBRACE);
		{
			if (true)
				return new Query(tpl, f);
		}
		throw new Error("Missing return statement in function");
	}

	private boolean jj_2_1(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_1();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(0, xla);
		}
	}

	private boolean jj_3R_10() {
		Token xsp;
		xsp = jj_scanpos;
		if (jj_3R_11()) {
			jj_scanpos = xsp;
			if (jj_3R_12())
				return true;
		}
		return false;
	}

	private boolean jj_3R_5() {
		if (jj_scan_token(AND))
			return true;
		if (jj_3R_6())
			return true;
		return false;
	}

	private boolean jj_3R_6() {
		Token xsp;
		xsp = jj_scanpos;
		if (jj_3R_7()) {
			jj_scanpos = xsp;
			if (jj_3R_8()) {
				jj_scanpos = xsp;
				if (jj_3R_9())
					return true;
			}
		}
		return false;
	}

	private boolean jj_3R_4() {
		if (jj_scan_token(OR))
			return true;
		if (jj_3R_6())
			return true;
		return false;
	}

	private boolean jj_3R_11() {
		if (jj_scan_token(IDENTIFICADOR))
			return true;
		return false;
	}

	private boolean jj_3_1() {
		Token xsp;
		xsp = jj_scanpos;
		if (jj_3R_4()) {
			jj_scanpos = xsp;
			if (jj_3R_5())
				return true;
		}
		return false;
	}

	private boolean jj_3R_9() {
		if (jj_scan_token(LPAREN))
			return true;
		return false;
	}

	private boolean jj_3R_8() {
		if (jj_3R_10())
			return true;
		return false;
	}

	private boolean jj_3R_12() {
		Token xsp;
		xsp = jj_scanpos;
		if (jj_scan_token(26)) {
			jj_scanpos = xsp;
			if (jj_scan_token(27))
				return true;
		}
		return false;
	}

	private boolean jj_3R_7() {
		if (jj_scan_token(NOT))
			return true;
		return false;
	}

	/** Generated Token Manager. */
	public TrcGrammarTokenManager token_source;
	SimpleCharStream jj_input_stream;
	/** Current token. */
	public Token token;
	/** Next token. */
	public Token jj_nt;
	private int jj_ntk;
	private Token jj_scanpos, jj_lastpos;
	private int jj_la;
	private int jj_gen;
	final private int[] jj_la1 = new int[11];
	static private int[] jj_la1_0;
	static private int[] jj_la1_1;
	static {
		jj_la1_init_0();
		jj_la1_init_1();
	}

	private static void jj_la1_init_0() {
		jj_la1_0 = new int[] { 0xc000000, 0x4c000000, 0x80010000, 0xc000000, 0x4c000000, 0x3f00000, 0x0, 0x2000, 0xc00,
				0x4c01d000, 0x4c011000, };
	}

	private static void jj_la1_init_1() {
		jj_la1_1 = new int[] { 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x1, 0x0, 0x0, 0x0, 0x0, };
	}

	final private JJCalls[] jj_2_rtns = new JJCalls[1];
	private boolean jj_rescan = false;
	private int jj_gc = 0;

	/** Constructor with InputStream. */
	public TrcGrammar(java.io.InputStream stream) {
		this(stream, null);
	}

	/** Constructor with InputStream and supplied encoding */
	public TrcGrammar(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source = new TrcGrammarTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 11; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}

	/** Reinitialise. */
	public void ReInit(java.io.InputStream stream) {
		ReInit(stream, null);
	}

	/** Reinitialise. */
	public void ReInit(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream.ReInit(stream, encoding, 1, 1);
		} catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 11; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}

	/** Constructor. */
	public TrcGrammar(java.io.Reader stream) {
		jj_input_stream = new SimpleCharStream(stream, 1, 1);
		token_source = new TrcGrammarTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 11; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}

	/** Reinitialise. */
	public void ReInit(java.io.Reader stream) {
		jj_input_stream.ReInit(stream, 1, 1);
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 11; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}

	/** Constructor with generated Token Manager. */
	public TrcGrammar(TrcGrammarTokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 11; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}

	/** Reinitialise. */
	public void ReInit(TrcGrammarTokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 11; i++)
			jj_la1[i] = -1;
		for (int i = 0; i < jj_2_rtns.length; i++)
			jj_2_rtns[i] = new JJCalls();
	}

	private Token jj_consume_token(int kind) throws ParseException {
		Token oldToken;
		if ((oldToken = token).next != null)
			token = token.next;
		else
			token = token.next = token_source.getNextToken();
		jj_ntk = -1;
		if (token.kind == kind) {
			jj_gen++;
			if (++jj_gc > 100) {
				jj_gc = 0;
				for (int i = 0; i < jj_2_rtns.length; i++) {
					JJCalls c = jj_2_rtns[i];
					while (c != null) {
						if (c.gen < jj_gen)
							c.first = null;
						c = c.next;
					}
				}
			}
			return token;
		}
		token = oldToken;
		jj_kind = kind;
		throw generateParseException();
	}

	static private final class LookaheadSuccess extends java.lang.Error {
		private static final long serialVersionUID = 1L;
	}

	final private LookaheadSuccess jj_ls = new LookaheadSuccess();

	private boolean jj_scan_token(int kind) {
		if (jj_scanpos == jj_lastpos) {
			jj_la--;
			if (jj_scanpos.next == null) {
				jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
			} else {
				jj_lastpos = jj_scanpos = jj_scanpos.next;
			}
		} else {
			jj_scanpos = jj_scanpos.next;
		}
		if (jj_rescan) {
			int i = 0;
			Token tok = token;
			while (tok != null && tok != jj_scanpos) {
				i++;
				tok = tok.next;
			}
			if (tok != null)
				jj_add_error_token(kind, i);
		}
		if (jj_scanpos.kind != kind)
			return true;
		if (jj_la == 0 && jj_scanpos == jj_lastpos)
			throw jj_ls;
		return false;
	}

	/** Get the next Token. */
	final public Token getNextToken() {
		if (token.next != null)
			token = token.next;
		else
			token = token.next = token_source.getNextToken();
		jj_ntk = -1;
		jj_gen++;
		return token;
	}

	/** Get the specific Token. */
	final public Token getToken(int index) {
		Token t = token;
		for (int i = 0; i < index; i++) {
			if (t.next != null)
				t = t.next;
			else
				t = t.next = token_source.getNextToken();
		}
		return t;
	}

	private int jj_ntk() {
		if ((jj_nt = token.next) == null)
			return (jj_ntk = (token.next = token_source.getNextToken()).kind);
		else
			return (jj_ntk = jj_nt.kind);
	}

	private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
	private int[] jj_expentry;
	private int jj_kind = -1;
	private int[] jj_lasttokens = new int[100];
	private int jj_endpos;

	private void jj_add_error_token(int kind, int pos) {
		if (pos >= 100)
			return;
		if (pos == jj_endpos + 1) {
			jj_lasttokens[jj_endpos++] = kind;
		} else if (jj_endpos != 0) {
			jj_expentry = new int[jj_endpos];
			for (int i = 0; i < jj_endpos; i++) {
				jj_expentry[i] = jj_lasttokens[i];
			}
			jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
				int[] oldentry = (int[]) (it.next());
				if (oldentry.length == jj_expentry.length) {
					for (int i = 0; i < jj_expentry.length; i++) {
						if (oldentry[i] != jj_expentry[i]) {
							continue jj_entries_loop;
						}
					}
					jj_expentries.add(jj_expentry);
					break jj_entries_loop;
				}
			}
			if (pos != 0)
				jj_lasttokens[(jj_endpos = pos) - 1] = kind;
		}
	}

	/** Generate ParseException. */
	public ParseException generateParseException() {
		jj_expentries.clear();
		boolean[] la1tokens = new boolean[34];
		if (jj_kind >= 0) {
			la1tokens[jj_kind] = true;
			jj_kind = -1;
		}
		for (int i = 0; i < 11; i++) {
			if (jj_la1[i] == jj_gen) {
				for (int j = 0; j < 32; j++) {
					if ((jj_la1_0[i] & (1 << j)) != 0) {
						la1tokens[j] = true;
					}
					if ((jj_la1_1[i] & (1 << j)) != 0) {
						la1tokens[32 + j] = true;
					}
				}
			}
		}
		for (int i = 0; i < 34; i++) {
			if (la1tokens[i]) {
				jj_expentry = new int[1];
				jj_expentry[0] = i;
				jj_expentries.add(jj_expentry);
			}
		}
		jj_endpos = 0;
		jj_rescan_token();
		jj_add_error_token(0, 0);
		int[][] exptokseq = new int[jj_expentries.size()][];
		for (int i = 0; i < jj_expentries.size(); i++) {
			exptokseq[i] = jj_expentries.get(i);
		}
		return new ParseException(token, exptokseq, tokenImage);
	}

	/** Enable tracing. */
	final public void enable_tracing() {
	}

	/** Disable tracing. */
	final public void disable_tracing() {
	}

	private void jj_rescan_token() {
		jj_rescan = true;
		for (int i = 0; i < 1; i++) {
			try {
				JJCalls p = jj_2_rtns[i];
				do {
					if (p.gen > jj_gen) {
						jj_la = p.arg;
						jj_lastpos = jj_scanpos = p.first;
						switch (i) {
						case 0:
							jj_3_1();
							break;
						}
					}
					p = p.next;
				} while (p != null);
			} catch (LookaheadSuccess ls) {
			}
		}
		jj_rescan = false;
	}

	private void jj_save(int index, int xla) {
		JJCalls p = jj_2_rtns[index];
		while (p.gen > jj_gen) {
			if (p.next == null) {
				p = p.next = new JJCalls();
				break;
			}
			p = p.next;
		}
		p.gen = jj_gen + xla - jj_la;
		p.first = token;
		p.arg = xla;
	}

	static final class JJCalls {
		int gen;
		Token first;
		int arg;
		JJCalls next;
	}

}
